# enpm702-fall-2025

./: CMakeLists.txt
rwa2_starter/include/: sensor_types.hpp
rwa2_starter/src/: main.cpp
task1/: CMakeLists.txt
task1/src/: task1.cpp
task2/: CMakeLists.txt
task2/include/: sensor_types.hpp
task2/src/: main.cpp
week2/: CMakeLists.txt
week2/src/: week2.cpp
week6/: CMakeLists.txt
week7/: CMakeLists.txt
